crates/tensorzero-derive/tests/ui/missing_tag.rs
#[derive(tensorzero_derive::TensorZeroDeserialize)]
enum Foo {
    Bar,
    Baz,
}

fn main() {}
